--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,10 @@ body {
     align-items: center;
     position: relative;
     overflow: hidden;
+
+    background-image: url("/img/bg-pattern-desktop.svg");
+    background-repeat: no-repeat;
+    background-position-x: -50px;
 }
 
 .accordion-left-column img {
