--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ body {
 }
 
 .accordion-question {
-    background-color: red;
+    /* background-color: red; */
     padding: 1rem;
     border-bottom: 1px solid black;
     cursor: pointer;
