--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ body {
     padding: 1rem;
     border-bottom: 1px solid black;
     cursor: pointer;
+    font-weight: 400;
 }
 
 .accordion-question:after{
@@ -96,4 +97,8 @@ body {
 
 .accordion-content.active .accordion-answer {
     display: block;
+}
+
+.accordion-content.active .accordion-question {
+    font-weight: 700;
 }
