--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,10 @@ body {
     overflow: hidden;
 
     background-image: url("/img/bg-pattern-desktop.svg");
+    background-size: 80%;
     background-repeat: no-repeat;
     background-position-x: -50px;
+    background-position-y: -100px;
 }
 
 .accordion-left-column img {
